--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo": "~49.0.10",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
+    "firebase-auth": "^0.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
     "react-native-gesture-handler": "~2.12.0",
