--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase-auth": "^0.1.2",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
